tests/negative/gold/factory-no-constructor-test.gold
tests/negative/factory-no-constructor-test.toit:5:7: error: A class with factories must have a constructor
class A:
      ^
tests/negative/factory-no-constructor-test.toit:7:12: error: Unresolved identifier: 'unresolved'
    return unresolved
           ^~~~~~~~~~
Compilation failed
